Fixed authorization in the controllers and methods